Fix footer alignment

--- a/css/main.css
+++ b/css/main.css
@@ -20,9 +20,9 @@ a {
   box-shadow: 0 -6px 25px 0px #999;
 }
 
-header {
+/* header {
   margin-bottom: 20px;
-}
+} */
 
 .navbar-toggler {
   float:right; 
@@ -65,4 +65,26 @@ pre {
 
 .card-body li {
   margin-bottom: 4px;
+}
+
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+
+#container {
+  min-height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+footer {
+  position: relative;
+  bottom:0;
+  width:100%;
+  height: 120px;   /* Height of the footer */
 }
